@@ -50,6 +50,9 @@ directories. The patool program overcomes this problem by
 first extracting files to a unique (temporary) directory, and
 then moving its contents back if possible. This also prevents
 local files from being overwritten by mistake.
+.br
+All extracted files are checked that they are readable by the
+current user.
 .TP
 \fB\-v\fP, \fB\-\-verbose\fP
 Be verbose when extracting (if the helper application supports it).
